--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,10 @@ Flask>=2.0
 Werkzeug>=2.0
 Jinja2>=3.0
 python-docx>=0.8.10
-
+gunicorn
 # Optional recommended (safe to include, Flask indirectly pulls these)
 click>=8.0
 itsdangerous>=2.0
 MarkupSafe>=2.0
 typing-extensions>=4.0
+
